<resources>
    <string name="app_name">SDGP-SILENT-VOICE</string>
    <string name="we_tried">WE TRIED</string>
    <string name="welcome">WELCOME</string>
    <string name="todo">TODO</string>
    <string name="log_in">Login</string>
    <string name="skip">skip</string>
    <string name="sign_up">Signup</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="permission_deny_text">Required permission denied, exiting the app</string>
    <string name="full_name">Full Name</string>
</resources>