<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sdgpmainbackground"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textViewLoginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:background="#B1CAC4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginTxt">

        <EditText
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:background="@drawable/text_drawable"
            android:layout_weight="1"
            android:id="@+id/emailTxtLogIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="20"
            android:inputType="textEmailAddress"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/text_drawable"
            android:ems="20"
            android:inputType="textVisiblePassword"
            android:text="@string/password"
            android:textAlignment="center" />


    </LinearLayout>

    <android.widget.Button
        android:background="@drawable/btn_final"
        android:id="@+id/submitButtonLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>